--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
 }
 
 .letter:after {
-  content:"te amoooo muchooo dieguito";
+  content:"Dieguito; Eres el niño mas lindo que ha llegado a mi vida, y hoy sin duda el más importante !!TE AMO CON TODA MI VIDA";
   position: absolute;
   top: 0;
   bottom: 0;
